objects/ssot__AbnExperimentationDailySummary__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AbnExperimentCohortId__c</fullName>
        <label>Experiment Cohort</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AbnExperimentId__c</fullName>
        <label>Experiment</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AssignedParticipantsCount__c</fullName>
        <label>Assigned Participants Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExperimentSummaryMetricType__c</fullName>
        <label>Metric Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ForDate__c</fullName>
        <label>For Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Abn Experimentation Daily Summary Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsPrimary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__LastUpdatedDateTime__c</fullName>
        <label>Last Updated Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__MetricName__c</fullName>
        <label>Metric Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MetricValueNumber__c</fullName>
        <label>Metric Value</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__SignalDenominatorValueNumber__c</fullName>
        <label>Signal Denominator Value</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__SignalNumeratorValueNumber__c</fullName>
        <label>Signal Numerator Value</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1726745174579_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AbnExperimentationDailySummary_AbnEx_rel</label>
        <referenceTo>ssot__AbnExperiment__dlm</referenceTo>
        <relationshipLabel>AbnExperimentationDailySummary_AbnEx_rel</relationshipLabel>
        <relationshipName>rel_1726745174579_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1726745175890_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AbnExperimentationDailySummary_AbnEx_rel</label>
        <referenceTo>ssot__AbnExperimentCohort__dlm</referenceTo>
        <relationshipLabel>AbnExperimentationDailySummary_AbnEx_rel</relationshipLabel>
        <relationshipName>rel_1726745175890_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>